<resources>
    <string name="app_name">NewnestZiv</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--login-->
    <string name="login_title">登录</string>
    <string name="login_et_user">请输入账号</string>
    <string name="login_et_pwd">请输入密码</string>
    <string name="login_bt">登录</string>
    <string name="login_user_not_null">用户名不能为空</string>
    <string name="login_password_not_null">密码不能为空</string>
    <string name="login_save_user">记住用户名</string>
    <string name="login_save_password">记住密码</string>
    <string name="login_register">注册账号</string>
    <string name="login_find_password">找回密码</string>

    <!--MyCarFragment-->
    <string name="my_car_device_state">设备状态 : </string>
    <string name="my_car_state">正在查询</string>
    <string name="my_car_title">设备ID ：*</string>
    <string name="my_car_id_is_null">ID为空</string>

    <!--MessageFragment-->
    <string name="message_title">信息</string>

    <!--SettingFragment-->
    <string name="setting_title">设置</string>

    <!--MyFragment-->
    <string name="my_title">我</string>

    <!--SnapPicture-->
    <string name="snap_title">图片抓拍</string>
    <string name="snap_fail">抓图失败</string>
    <string name="device_off">设备不在线</string>

    <!--CarLocation-->
    <string name="car_location_title">车辆定位</string>

    <!--Video-->
    <string name="video_title">实时视频</string>

    <!--CarInfo-->
    <string name="car_info_title">车辆信息</string>

    <!--Fence-->
    <string name="fence_title">电子围栏</string>

    <!--Track-->
    <string name="track_title">轨迹查询</string>
</resources>
