<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimaryDark"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:padding="8dp"
            android:textColor="@color/white"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ziv_touming"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <com.zividig.newnestziv.ui.customview.DropEditText
            android:id="@+id/login_et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_et_user"
            android:padding="10dp"
            android:textColor="@color/white"
            android:drawablePadding="70dp"
            android:background="@drawable/shape_login_border"
            />
        <EditText
            android:id="@+id/login_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/login_et_pwd"
            android:padding="10dp"
            android:inputType="textPassword"
            android:drawablePadding="70dp"
            android:background="@drawable/shape_login_border"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        >
        <CheckBox
            android:id="@+id/login_cb_save_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_save_user"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"

            />
        <CheckBox
            android:id="@+id/login_cb_save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_save_password"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/login_bt_login"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/login_bt"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_btn"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom|center_horizontal"
        >
        <Button
            android:id="@+id/login_bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:background="@android:color/transparent"
            android:layout_marginRight="20dp"
            android:textSize="16sp"
            android:padding="3dp"
            android:textColor="@drawable/selector_login_text_button_color"
            />

        <View
            android:layout_width="2dp"
            android:layout_height="13dp"
            android:background="#212121"
            android:layout_marginBottom="15dp"
            />
        <Button
            android:id="@+id/login_bt_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_find_password"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:padding="3dp"
            android:textColor="@drawable/selector_login_text_button_color"
            />
    </LinearLayout>

</LinearLayout>